Hack to prevent double borders.

--- a/src/main/webapp/modal-overlay.css
+++ b/src/main/webapp/modal-overlay.css
@@ -155,12 +155,16 @@ a:hover {
 
 }
 
-.button-group button{
+.button-group button {
   cursor: pointer;
   padding: 10px 24px;
   color: white;
   float: left;
   border: 1px;
+}
+
+.button-group butto:not(:last-child) {
+  border-right:none;
 }
 
 #no-reviews {
